@@ -15,13 +15,14 @@ local function search_signals(target_signal, force, surface, surface_data)
         -- If prototype's `item_slot_count = 0` then .parameters will be nil
         for _, parameter in pairs(control_behavior.parameters or {}) do
           if signal_eq(parameter.signal, target_signal) then
-            add_entity(entity, surface_data.signals)
+            add_entity_signal(entity, surface_data.signals, parameter.count)
             break
           end
         end
       elseif entity_type == "arithmetic-combinator" or entity_type == "decider-combinator" then
-        if control_behavior.get_signal_last_tick(target_signal) ~= nil then
-          add_entity(entity, surface_data.signals)
+        local signal_count = control_behavior.get_signal_last_tick(target_signal)
+        if signal_count ~= nil then
+          add_entity_signal(entity, surface_data.signals, signal_count)
         end
       elseif entity_type == "roboport" then
         for _, signal in pairs({ control_behavior.available_logistic_output_signal, control_behavior.total_logistic_output_signal, control_behavior.available_construction_output_signal, control_behavior.total_construction_output_signal }) do
