@@ -1,6 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.1
 Date: ???
+  Features:
+    - Added total request count to tooltips of 'Request' result groups
+    - Added total signal value to tooltips of 'Signal' result groups
   Bugfixes:
     - Fixed some furnaces not being found in 'Product' searches
 ---------------------------------------------------------------------------------------------------
